Bug 145801 - Different heights of sidebar content panel title elements
Summary: Different heights of sidebar content panel title elements
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.3.0 target:7.2.5
Keywords: needsUXEval
Depends on:
Blocks:
 
Reported: 2021-11-20 21:36 UTC by Thorsten Wagner
Modified: 2021-12-06 13:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (2.04 MB, image/png)
2021-11-20 21:36 UTC, Thorsten Wagner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Wagner 2021-11-20 21:36:23 UTC
Description:
Sidebar delimiters vary in height depending on the extstence of a button on the right (see screenshot, red boxes). Height of delimiter within upper red box is larger then height of delimiter within lower red box.

Steps to Reproduce:
1. Open Impress
2. Look at the sidebar

Actual Results:
Height of sidebar delimiters with buttons is larger than height of delimiters without buttons

Expected Results:
Height of sidebar delimiters with buttons is equal to height of delimiters without buttons


Reproducible: Always


User Profile Reset: No



Additional Info:
Issue does not exist in LO 7.1.7. Maybe button size has changed here compared to earlier releases.
Comment 1 Thorsten Wagner 2021-11-20 21:36:44 UTC
Created attachment 176386 [details]
Screenshot
Comment 2 V Stuart Foote 2021-11-21 15:19:31 UTC
The heights differ when the Content Panel Title [1] holds a 'More Options' button widget as compared to a Content Panel Title that does not.

The padding for the button could be reduced (reducing the height of the title), or the title's without button could get extra padding.

But personally I see no reason to change.

=-ref-=
[1] https://wiki.documentfoundation.org/Design/Guidelines/Sidebar
Comment 3 Commit Notification 2021-11-23 17:35:51 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/90db4351138dec97f8dd2ebc350e8aef18a5358f

Resolves tdf#145801 - Uniform height for sidebar's panel titles

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2021-11-24 02:55:19 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/c6fbb0a9b4579af1f3d2429bda54bcae0cd6e38e

Resolves tdf#145801 - Uniform height for sidebar's panel titles

It will be available in 7.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Christian Lohmaier 2021-12-06 13:28:48 UTC
7.2.4 was a hotfix release, updating target in status-whiteboard