Resolves tdf#145801 - Uniform height for sidebar's panel titles

Set height of all panel titles to the maximum height a panel title could need

Change-Id: I1c023224fbca09b8f73151126b25df5f438260ce
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125650
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>